--- a/ProyectoFinalDI/app/src/main/AndroidManifest.xml
+++ b/ProyectoFinalDI/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.Proyecto">
+            android:theme="@style/Theme.Proyecto"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="unspecified">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
